syntax = "proto3";

package model;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.messagename_all) = true;

// A plugin resource
message Plugin {
    string pluginName = 1;
    int32 id = 2;
    bool selected = 3;
    int32 port = 4;
};

// A custom plugin resource
message CustomPlugin {
    string pluginName = 1;
    string packageName = 2;
};

// Project holds the data fields stored
message Project {
    string projectName = 1;
    repeated Plugin plugin = 2;
    string agentName = 3;
    repeated CustomPlugin customPlugin = 4;
}